--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,6 @@ jobs:
           key: dialyzer-PLT-cache-{{ checksum "mix.exs" }}
           paths:
             - _build
+      - run: env MIX_ENV=test mix coveralls.circle
+      - run: env MIX_ENV=test mix coveralls.json
+      - run: bash <(curl -s https://codecov.io/bash)
