--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,10 @@ jobs:
       - run: mix deps.get
       - run: env MIX_ENV=test mix ecto.create
       - run: env MIX_ENV=test mix ecto.migrate
+      - run: openssl genrsa -out localhost.key 2048
+      - run: openssl req -new -x509 -key localhost.key -out localhost.cert -days 3650 -subj /CN=localhost
+      - run: mkdir priv/keys
+      - run: mv localhost.* priv/keys
       - run: mix test
       - run: mix credo
       - restore_cache:
