--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ jobs:
       # specify the version here
       - image: circleci/elixir:1.6
 
+      - image: circleci/postgres:10.1-alpine  # database image
+        environment:  # environment variables for database
+          POSTGRES_USER: postgres
+          POSTGRES_DB: poabackend_stats_test
+          POSTGRES_PASSWORD: postgres
+
     working_directory: ~/repo
     steps:
       - checkout
